--- a/setup.cfg
+++ b/setup.cfg
@@ -7,7 +7,7 @@ url = https://sajidsarker.github.io/2022/09/10/neo-linear-algebra-for-python.htm
 description = NEO Linear Algebra package for matrix manipulation.
 long_description = file: README.md
 long_description_content_type = text/markdown
-keywords = linear algebra, algebra, matrix, vector, math
+keywords = linear algebra, matrix algebra, matrix, matrices, vector, vectors, math
 license = MIT
 classifiers =
     Development Status :: 3 - Alpha
