--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = neolinearalgebra
-version = 0.1.6
+version = 0.2.1
 author = Sajid Sarker
 author_email = sajid.sarker@gmail.com
 url = https://sajidsarker.github.io/2022/09/10/neo-linear-algebra-for-python.html
@@ -10,7 +10,7 @@ long_description_content_type = text/markdown
 keywords = linear algebra, matrix algebra, matrix, matrices, vector, vectors, math
 license = MIT
 classifiers =
-    Development Status :: 3 - Alpha
+    Development Status :: 4 - Beta
     Topic :: Utilities
     License :: OSI Approved :: MIT License
     Natural Language :: English
