--- a/setup.cfg
+++ b/setup.cfg
@@ -1,10 +1,10 @@
 [metadata]
 name = neolinearalgebra
-version = 0.2.1
+version = 0.2.2
 author = Sajid Sarker
 author_email = sajid.sarker@gmail.com
 url = https://sajidsarker.github.io/2022/09/10/neo-linear-algebra-for-python.html
-description = NEO Linear Algebra package for matrix manipulation.
+description = NEO Linear Algebra package for Matrix Manipulation.
 long_description = file: README.md
 long_description_content_type = text/markdown
 keywords = linear algebra, matrix algebra, matrix, matrices, vector, vectors, math
